--- a/README.Rmd
+++ b/README.Rmd
@@ -1,2 +1,2 @@
 
-# A personal repository to store useful scripts & best practices
+## A personal repository to store useful scripts & best practices
